[package]
name = "centerme"
description = "Automatically centers a window on the primary monitor."
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellscalingapi"] }
